--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "bluebird": "^3.4.0",
     "jpeg-js": "^0.1.2",
     "lodash": "^4.13.1",
-    "node-fetch": "^1.5.3",
+    "prettysize": "0.0.3",
     "ramda": "^0.21.0",
+    "request": "^2.72.0",
+    "request-promise": "^3.0.0",
     "slug": "^0.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^2.11.1"
   }
 }
